--- a/app/src/main/res/layout/learner_quiz_score_card.xml
+++ b/app/src/main/res/layout/learner_quiz_score_card.xml
@@ -24,21 +24,50 @@
             android:gravity="start"
             android:text="Learner-1"
             android:textColor="@android:color/black"
-            android:textSize="24dp" />
+            android:textSize="20dp" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+<!--            <ProgressBar-->
+<!--                android:id="@+id/learner_progress_bar"-->
+<!--                style="?android:attr/progressBarStyle"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:progress="80"-->
+<!--                android:progressDrawable="@drawable/progress_bar_circle"-->
+<!--                app:layout_constraintEnd_toEndOf="@+id/learner_quiz_score"-->
+<!--                app:layout_constraintStart_toStartOf="@+id/learner_quiz_score"-->
+<!--                app:layout_constraintTop_toTopOf="@+id/learner_quiz_score" />-->
+
+            <ProgressBar
+                android:id="@+id/quiz_score_progress_bar"
+                style="@style/Widget.AppCompat.ProgressBar"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:indeterminateOnly="false"
+                android:progress="80"
+                android:progressDrawable="@drawable/progress_bar_circle"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHorizontal_bias="0.823"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0"
+                tools:progress="80" />
+
             <TextView
                 android:id="@+id/learner_quiz_score"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="24dp"
+                android:layout_width="33dp"
+                android:layout_height="45dp"
+                android:textSize="19dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.658"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.644" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
