Quiz List on EducatorCourse changes

--- a/app/src/main/res/layout/activity_create_quiz.xml
+++ b/app/src/main/res/layout/activity_create_quiz.xml
@@ -128,23 +128,27 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/correctOp1"
-                    android:text="Option-1" />
+                    android:textSize="14dp"
+                    android:text="Option1" />
 
                 <CheckBox
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/correctOp2"
-                    android:text="Option-2" />
+                    android:textSize="14dp"
+                    android:text="Option2" />
                 <CheckBox
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/correctOp3"
-                    android:text="Option-3" />
+                    android:textSize="14dp"
+                    android:text="Option3" />
                 <CheckBox
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/correctOp4"
-                    android:text="Option-4" />
+                    android:textSize="14dp"
+                    android:text="Option4" />
 
 
             </LinearLayout>
