--- a/app/src/main/res/layout/activity_view_quiz.xml
+++ b/app/src/main/res/layout/activity_view_quiz.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -31,35 +32,11 @@
         app:layout_constraintTop_toBottomOf="@+id/titleTV"
         app:layout_constraintVertical_bias="0.034">
 
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:orientation="vertical">-->
-
-<!--            <TextView-->
-<!--                android:id="@+id/displayTV"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_margin="15dp"-->
-<!--                android:fontFamily="@font/urbanist"-->
-<!--                android:textSize="16sp" />-->
-
-<!--            <Button-->
-<!--                android:id="@+id/OKbutton"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginBottom="20dp"-->
-<!--                android:backgroundTint="@android:color/black"-->
-<!--                android:text="OK"-->
-<!--                android:textColor="#ffff" />-->
-
-<!--        </LinearLayout>-->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_view_quiz"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"/>
-
 
     </ScrollView>
 
@@ -70,5 +47,7 @@
         android:backgroundTint="@android:color/black"
         android:text="OK"
         android:textColor="#ffff"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/scrollView3"
+        android:layout_marginTop="10dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
