--- a/app/src/main/res/layout/fragment_question_count.xml
+++ b/app/src/main/res/layout/fragment_question_count.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     tools:context=".fragment.educator.QuestionCountFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,17 +24,19 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:background="@color/background"
+            android:layout_marginBottom="10dp">
 
             <TextView
                 android:id="@+id/textView6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:paddingLeft="10dp"
                 android:paddingTop="10dp"
+                android:paddingStart="10dp"
                 android:text="Activity Name:"
-                android:textAlignment="center" />
+                android:layout_gravity="start"/>
 
             <EditText
                 android:id="@+id/activityNameEditText"
@@ -51,7 +50,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:background="@color/background"
+            android:layout_marginBottom="10dp">
 
             <TextView
                 android:id="@+id/textView"
@@ -60,7 +61,7 @@
                 android:paddingStart="10dp"
                 android:paddingTop="10dp"
                 android:text="Enter no. of Questions:"
-                android:textAlignment="center" />
+                android:layout_gravity="start" />
 
             <EditText
                 android:id="@+id/questionCount"
@@ -72,8 +73,10 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="89dp"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="@color/background"
+            android:layout_marginBottom="10dp">
 
             <TextView
                 android:id="@+id/textView4"
@@ -82,13 +85,92 @@
                 android:paddingStart="10dp"
                 android:paddingTop="10dp"
                 android:text="Select Course"
-                android:textAlignment="center" />
+                android:layout_gravity="start" />
 
             <Spinner
                 android:id="@+id/courseSpinner"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingTop="10dp"/>
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginBottom="10dp">
+
+            <RadioGroup
+                android:id="@+id/add_start_and_end_date_quiz_radio"
+                android:layout_marginStart="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/add_start_and_end_date_quiz_radio_btn"
+                    android:text="Schedule the quiz"
+                    android:textSize="20sp"
+                    android:textColor="@color/black"
+                    android:layout_marginEnd="10dp"
+                    android:checked="false"
+                    android:buttonTint="@color/black"/>
+
+            </RadioGroup>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@color/background"
+            android:layout_marginBottom="10dp">
+
+            <TextView
+                android:id="@+id/textView_start_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingStart="10dp"
+                android:paddingTop="10dp"
+                android:text="Start Date"
+                android:paddingEnd="30dp"
+                android:layout_gravity="start" />
+
+            <DatePicker
+                android:id="@+id/start_date_quiz"
+                android:layout_width="wrap_content"
+                android:layout_height="120dp"
+                android:datePickerMode="spinner"
+                android:calendarViewShown="false"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@color/background">
+
+            <TextView
+                android:id="@+id/textView_end_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingStart="10dp"
+                android:paddingTop="10dp"
+                android:text="End Date"
+                android:paddingEnd="30dp"
+                android:layout_gravity="start" />
+
+            <DatePicker
+                android:id="@+id/end_date_quiz"
+                android:layout_width="wrap_content"
+                android:layout_height="120dp"
+                android:datePickerMode="spinner"
+                android:calendarViewShown="false"
                 />
         </LinearLayout>
 
