--- a/app/src/main/res/layout/quiz_list_card.xml
+++ b/app/src/main/res/layout/quiz_list_card.xml
@@ -10,24 +10,51 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:orientation="horizontal"
-        android:gravity="center">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:orientation="horizontal"
+            android:gravity="center">
+
+            <TextView
+                android:id="@+id/tv_quiz_name"
+                android:layout_width="254dp"
+                android:layout_height="wrap_content"
+                android:text="Quiz-2"
+                android:textColor="@android:color/black"
+                android:textSize="24dp" />
+
+            <ProgressBar
+                android:id="@+id/progress_load_quiz"
+                android:layout_width="80dp"
+                android:layout_height="30dp"
+                android:indeterminateTint="#0C0C0C"
+                android:visibility="gone"/>
+
+        </LinearLayout>
 
         <TextView
-            android:id="@+id/tv_quiz_name"
-            android:layout_width="254dp"
+            android:id="@+id/tv_quiz_start_date"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Quiz-2"
-            android:textColor="@android:color/black"
-            android:textSize="24dp" />
+            android:text="Start Date"
+            android:textColor="@color/light_gray"
+            android:textSize="16dp"
+            android:layout_marginStart="30dp"
+            android:visibility="gone"/>
 
-        <ProgressBar
-            android:id="@+id/progress_load_quiz"
-            android:layout_width="80dp"
-            android:layout_height="30dp"
-            android:indeterminateTint="#0C0C0C"
+        <TextView
+            android:id="@+id/tv_quiz_end_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="End Date"
+            android:textColor="@color/light_gray"
+            android:textSize="16dp"
+            android:layout_marginStart="30dp"
             android:visibility="gone"/>
 
     </LinearLayout>
