--- a/app/src/main/res/layout/start_quiz_card.xml
+++ b/app/src/main/res/layout/start_quiz_card.xml
@@ -10,42 +10,69 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/tv_quiz_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Quiz-2"
-            android:textColor="@android:color/black"
-            android:textSize="24dp"
-            android:layout_gravity="start"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <LinearLayout
-            android:id="@+id/ll_start_quiz"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="end">
+            android:padding="8dp"
+            android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/tv_quiz_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Quiz-2"
+                android:textColor="@android:color/black"
+                android:textSize="24dp"
+                android:layout_gravity="start"/>
+
+            <LinearLayout
+                android:id="@+id/ll_start_quiz"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="START "
-                android:textSize="24dp"
-                android:textStyle="bold"
-                android:textColor="@color/black"
-                android:gravity="end"/>
+                android:orientation="horizontal"
+                android:layout_gravity="end">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="START "
+                    android:textSize="24dp"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:gravity="end"/>
+
+            </LinearLayout>
+
+            <ProgressBar
+                android:id="@+id/progress_load_quiz"
+                android:layout_width="80dp"
+                android:layout_height="30dp"
+                android:indeterminateTint="#0C0C0C"
+                android:visibility="gone"/>
 
         </LinearLayout>
 
-        <ProgressBar
-            android:id="@+id/progress_load_quiz"
-            android:layout_width="80dp"
-            android:layout_height="30dp"
-            android:indeterminateTint="#0C0C0C"
+        <TextView
+            android:id="@+id/tv_start_quiz_card_start_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Start Date"
+            android:textColor="@color/light_gray"
+            android:textSize="16dp"
+            android:layout_marginStart="30dp"
+            android:visibility="gone"/>
+
+        <TextView
+            android:id="@+id/tv_start_quiz_card_end_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="End Date"
+            android:textColor="@color/light_gray"
+            android:textSize="16dp"
+            android:layout_marginStart="30dp"
             android:visibility="gone"/>
 
     </LinearLayout>
