--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -22,16 +22,31 @@
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
             app:title="Profile"
             app:navigationIcon="@drawable/baseline_arrow_back_24"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:padding="20sp">
 
-        <ImageView
-            android:id="@+id/profile_picture"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:src="@drawable/baseline_account_circle_24"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="32dp"
-            android:contentDescription="Profile Picture"/>
+            <ImageView
+                android:id="@+id/profile_picture"
+                android:layout_width="162dp"
+                android:layout_height="162dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="32dp"
+                android:contentDescription="Profile Picture"
 
+                android:src="@drawable/baseline_account_circle_24" />
+
+            <Button
+                android:id="@+id/imageEditButton"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginTop="50dp"
+                android:background="@android:drawable/ic_menu_edit"
+                android:text="" />
+        </LinearLayout>
         <EditText
             android:id="@+id/profile_display_name"
             android:layout_width="match_parent"
