--- a/app/src/main/res/layout/activity_view_quiz.xml
+++ b/app/src/main/res/layout/activity_view_quiz.xml
@@ -47,7 +47,6 @@
         android:backgroundTint="@android:color/black"
         android:text="OK"
         android:textColor="#ffff"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView3"
-        android:layout_marginTop="10dp" />
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
