--- a/app/src/main/res/layout/educator_view_course.xml
+++ b/app/src/main/res/layout/educator_view_course.xml
@@ -97,8 +97,8 @@
 
                 <Button
                     android:id="@+id/addQuizButton"
-                    android:layout_width="60dp"
-                    android:layout_height="wrap_content"
+                    android:layout_width="55dp"
+                    android:layout_height="55dp"
                     android:background="@android:drawable/ic_menu_add"
                     android:backgroundTint="#8BC34A"
                     android:foregroundTint="#8BC34A"
