--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -66,6 +66,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Password"
+                android:inputType="textPassword"
                 android:textColor="@color/black"
                 android:id="@+id/register_password_edit_text"/>
         </com.google.android.material.textfield.TextInputLayout>
