--- a/app/src/main/res/layout/activity_view_quiz.xml
+++ b/app/src/main/res/layout/activity_view_quiz.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".educator.ViewQuizActivity">
+    tools:context=".educator.ViewQuizActivity"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/titleTV"
@@ -16,37 +15,27 @@
         android:padding="10dp"
         android:textColor="#ffff"
         android:background="@color/black"
-        android:textSize="28dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ScrollView
-        android:id="@+id/scrollView3"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleTV"
-        app:layout_constraintVertical_bias="0.034">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_view_quiz"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"/>
-
-    </ScrollView>
+        android:textSize="28dp" />
 
     <Button
         android:id="@+id/OKbutton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="@android:color/black"
-        android:text="OK"
-        android:textColor="#ffff"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        android:text="CLOSE"
+        android:layout_margin="10dp"
+        android:textColor="#ffffff"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ScrollView
+        android:id="@+id/scrollView3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_view_quiz"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"/>
+    </ScrollView>
+
+</LinearLayout>
